--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,10 @@ services:
       - REDIS_ADDR=redis:6379
     networks:
       - app-network
+    volumes:
+      - .:/app
+    working_dir: /app
+    command: go run main.go
 
   redis:
     image: redis:7.2-alpine
