--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       - redis
     environment:
       - REDIS_ADDR=redis:6379
+      - JWT_SECRET=secret-key
     networks:
       - app-network
     volumes:
